css/style.css
navbar{
  position: fixed;
  margin-top: 0;
  width: 100%;
  display: flex;
  background-color: white;
  justify-content: space-between;
  align-items: center;
  border-top-style: none;
  border-bottom: solid 1px lightgrey;
  height: 36px;
  left:0;
  top:0;
  z-index: 3;

}


.navbar-li{
  list-style: none;
  display: inline-block;
  font-size: 16px;
  margin-right: 10px;
  }

  .nytimes-logo{
    height:25px;
    cursor: pointer;
  }
  .right-nav{
    display: flex;
    flex-direction: row;
    margin: 0 0 0 10px;
    padding: 0 0 0 2px;
  }

.nav-button{
  background-color: rgb(86, 123, 149);
  color: white;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(50, 104, 145);
  margin: 5px 13px 3px 0;
  padding: 4px;
  font-weight:bold;
}
.heading{
  position:relative;
  top: 4rem;

}

.title-container{


  width: 35%;
  background-color: steelblue;
  margin: auto;
}

.title{
  color: #121212;
  font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
  font-size: 2rem;
  line-height: 3rem;
  font-style: italic;
  max-width: 600px;
  float:left;
}

.telescop-1-img-container{

    width: 72%;
    margin: auto;
}

.telescop-1-img{
  margin-top: 50px;
  width: 100%;
}

.telescop-1-img-container > p{
  width: 78%;
  color: #666;
  margin-left: 0;
  float: left;
}
.author{
  display: flex;
  flex-direction: column;
  margin-top: 70px;
  width: 62%;
  align-items: center;
  margin:auto;
}
.by{
width: 80%;
}

.by > p{
  text-decoration: underline;
}

.by > p:hover{
  text-decoration: none;
}

.author-row{
 width: 80%;
}

.inline-block{
  display: inline-block;
}

.share-items{
  float: right;
  font-size: 15px;
}

.share-items > i{
  margin: 5px;
  padding: 6px;
  background-color: lightgrey;
  border-radius: 50%;
  cursor: pointer;
  border: solid lightgrey 1px;
}

.share-items > i:hover{
  background-color: white;
}

.first-artcle,
.second-article,
.third-article,
.fourth-article,
.fifth-article,
.sixth-article,
.seventh-article{
  width: 50%;
  margin: auto;
  font-size: 20px;
  font-family:nyt-imperial,georgia,'times new roman',times,serif;

}
.blue-highlight{
  color: rgb(86, 123, 149);
  text-decoration:underline;
  font-size: x-large;
  font-weight: 500;
  cursor: pointer;
}
.Subscribe{
  width:45% ;
  margin:auto;
  cursor: pointer;
  height: auto;
  top:0;
}
.blue{
  font-size:15px;
  color: rgb(86, 123, 149);
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  cursor: pointer;
  top:0;
  text-align: center;
}
.black{
  text-align: center;
}
aside{
  float:right;
  width:190px;
  text-decoration: none;
  display: block;
  margin-top: 10em;
  margin-right:3em ;
  justify-content: space-between;
  
}
.aside-heading{
  font-family: nyt-franklin, helvetica, arial, sans-serif;
    font-weight: 700;
    color: rgb(0, 0, 0);
    font-size: 14px;
    letter-spacing: 0.01em;
}
.aside-para{
  text-decoration-line:none;;
    font-family: nyt-cheltenham-small, georgia, "times new roman";
    font-weight: 600;
    font-size: 12px;
    width: 90%;
    color: rgb(51, 51, 51);
    padding-bottom: 15px;
    cursor: pointer;
    float: right;
    text-align: left;
    margin-left: 2em;
    
}
.aside-para-image{
  margin-left:0;
  margin-right: 14px;
}
.aside-para img{
  width:70px;
  float:left;
}
.hr-1{
  width:12%;
}

.h2-heading{
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 700;
}

.infla-container{
  width: 70%;
  margin:auto;
}

.grid-container{
 display: grid;
 justify-content: space-between;
 border: solid 1px white;
 grid-template-columns: repeat(4, 2fr);
 grid-gap:0.4em;
}

.inflation-heading{
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 600;
  bottom: 0;
}

.infla-container > p{
  top:0;
  color: #666;
  margin-left: 0;
  float: left;
}
.grid-image{
  width: 200px;
}

.grid-paragraph{
width:180px;
font-family: nyt-franklin,arial,helvetica,sans-serif;
    font-size: 14px;
    line-height: 17px;
    font-weight: 300;
    color: #000000;
}
iframe{
  width:600px;
  height:319px;
}
.article-image{
  background-color: lightcoral;
  width:100%;
}
figure img{
  width:100%;
  height: 100%;
}
.version{
  font-size:14px;
  color: #666;
  margin-left: 0;
  float: left;
}
.comments{
  margin:90px 0 0 0 ;
  
  display:flex;
  justify-content: space-between;
  align-items: center;
}
.read{
  background-color: rgb(86, 123, 149);
    color: white;
    display: block;
    font-family: nyt-franklin, helvetica, arial, sans-serif;
    width:46%;
    text-align: center;
    padding:10px;
    margin:10px 0 0 0 ;
    border-radius:3px;
    border: 1px ;
}

